Version 0.2.4 (?? Apr 2007)
  - k5njournal changes:
    + in entry descriptions, wrap text at word boundaries (view/edit)
    + don't NullPointerException when data file is missing DTSTART values
Version 0.2.3 (18 Apr 2007)
  - Fix k5njournal bug: JTree was not refreshing to show newly added dates
Version 0.2.2 (17 Apr 2007)
  - Fix for k5njournal (NullPointerException if no journal entries yet)
Version 0.2.1 (16 Apr 2007)
  - Fix for k5njournal used with Java 1.4
Version 0.2.0 (16 Apr 2007)
  - Added k5njournal as the first application.  It will be compiled
    with the standard ant command and can be run with:
    "java -jar k5njournal-0.2.0.jar"
  - Made most members of Event protected and added get/set methods
  - Fixed handling of "LANGUANGE=..." in description and summary
  - Fixed handling of dates with "VALUE=DATE" attribute
  - Added error-checking for day of months (including leap year)
  - Added support for "CLASS" in Event object
  - Added support for "URL" in Event
  - Added implementation of Journal object (VJOURNAL)
  - Added unit tests based on JUnit.  Moved existing tests into
    new test directory
  - Patch 1464212: Date parsing problem (exception parsing UTC dates)
  - Renamed most methods and classes with "Ical" in them to
    "ICalendar" instead.
  - Changed Date.hasTime to Date.isDateOnly
  - Added new getter/setter methods to Date
  - Added new Utils.DateToYYYYMMDD method
Version 0.1.0 (02 Feb 2006)
  - Initial public release